# frisk

./: .gitignore  Cargo.toml  README.md
archpkg/: PKGBUILD
archpkg/src/frisk-0.1.0/: README.md
archpkg/src/frisk-0.1.0/src/: db.rs  github.rs  util.rs
src/: cli.rs  config.rs  extract.rs  installer.rs  main.rs  mirror.rs
