[package]
name = "frisk"
version = "0.1.0"
edition = "2021"
description = "A lightweight Linux package manager prototype with GitHub, HTTP mirror, and local package support"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
[package.metadata.deb]
maintainer = "Envizy"
copyright = "2026"
license-file = ["LICENSE", "0"]
depends = "$auto"
section = "utility"
priority = "optional"

assets = [
    ["target/release/frisk", "usr/bin/", "755"],
]
